# scopus-literature-visualization

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_日本語.md  add_abst_scopus.py  add_hashtag_keywords.py  add_yaml_metadata.py  combine_scopus_csv.py  enhance_keywords.py  fix_unicode_for_windows.py  json2tag_ref_scopus_async.py  main.py  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  run.py  scopus_doi_to_json.py  setup.py  setup_improved.py  test_crossplatform.py  update_markdown_keywords.py  work_log.md  メール設定.py  全自動実行.py
.github/: PROJECT_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add-to-project.yml  ci.yml  cross-platform-test.yml  test.yml
GFM_rev/: scopus_gfm_rev.csv
core/: scopus解析.py
dev_tools/: CLAUDE_開発版.md  README.md  テスト実行.py  作業再開.md  進行状況確認.py
pdf_tools/: PDF取得.py  download_open_access_pdfs.py  download_open_access_pdfs_fast_stdlib.py  download_researchgate_pdfs.py
scopus_literature_visualization/: __init__.py  cli.py  pdf_tools.py  pipeline.py
utils/: email_notification.py  クリーンアップ.py
