[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopus-literature-visualization"
version = "1.0.0"
description = "Scopus文献データベースから取得した文献情報を可視化するパイプラインシステム"
authors = [
    {name = "Literature Visualization Tool", email = "noreply@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "requests-cache>=0.9.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
full = [
    "aiohttp>=3.8.0",
    "nltk>=3.6.0",
]

[project.scripts]
scopus-lit-viz = "scopus_literature_visualization.cli:main"
scopus-pipeline = "scopus_literature_visualization.pipeline:main"
scopus-pdf = "scopus_literature_visualization.pdf_tools:main"

[project.urls]
Homepage = "https://github.com/lutelute/scopus-literature-visualization"
"Bug Reports" = "https://github.com/lutelute/scopus-literature-visualization/issues"
"Source" = "https://github.com/lutelute/scopus-literature-visualization"

[tool.setuptools.packages.find]
where = ["."]
include = ["scopus_literature_visualization*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.md", "*.txt"]